# helwan-terminal

./: PKGBUILD  PKGBUILD2  README.md  bashrc2.txt  diagram.txt
.github/workflows/: CleanUp.yml  build-arch.yml  build-deb.yml  build-flatpak.yml  build-rpm.yml  build.yml  builds.yml
helwan-terminal/: LICENSE  README.md  hel-terminal.spec  io.github.helwanlinux.HelwanTerminal.yml  meson.build
helwan-terminal/data/: helwan-terminal.desktop  helwan-terminal.gschema.xml
helwan-terminal/include/: config.h  main.h  preferences.h  shortcuts.h  terminal_tab.h  terminal_window.h  utils.h
helwan-terminal/src/: about.c  config.c  font_settings.c  key_events.c  main.c  mouse_events.c  preferences.c  shortcuts.c  tabs.c  terminal_tab.c  terminal_window.c  terminal_window.h  utils.c
helwan-terminal/tests/: test_utils.c
